# mattermost_notifier

./: README.md  mattermost_notifier.py  pyproject.toml  setup.cfg
