[metadata]
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Utilities
description = Send messages to mattermost
download_url = https://github.com/tommoral/mattermost_notifier.git
long_description = file: README.md, LICENSE
long_description_content_type = itext/markdown
license = BSD (3-clause)
maintainer = Thomas Moreau
maintainer_email = thomas.moreau@inria.fr
name = mattermost_notifier
platforms = any

[options]
install_requires =
    matterhook
project_urls =
    Source = https://github.com/tommoral/mattermost_notifier
    Tracker = https://github.com/tommoral/mattermost_notifier/issues

